--- a/dashboard.html
+++ b/dashboard.html
@@ -22,8 +22,9 @@
 .pro-modal__id { display:flex; align-items:center; gap: 12px; min-width:0; }
 .pro-headings { min-width:0; }
 .pro-title { font-weight:700; font-size:1.1rem; line-height:1.25; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-.pro-subtitle { opacity:.95; font-size:.9rem; display:flex; align-items:center; gap:.5rem; }
-.pro-dot { opacity:.75; }
+.pro-subtitle { opacity:.95; font-size:.9rem; display:flex; align-items:center; gap:.5rem; flex-wrap:wrap; row-gap:.25rem; }
+.pro-subtitle span { min-width:0; overflow-wrap:anywhere; }
+.pro-dot { opacity:.75; flex-shrink:0; }
 
 .pro-avatar {
   width:40px; height:40px; border-radius:50%;
@@ -52,7 +53,7 @@
 }
 .pro-meta__row { display:grid; grid-template-columns: 90px 1fr; gap: 10px; padding: 8px 6px; align-items:start; }
 .pro-meta__label { font-size:.8rem; color:#64748b; }
-.pro-meta__value { font-size:.95rem; color:#0f172a; word-break:break-word; }
+.pro-meta__value { font-size:.95rem; color:#0f172a; word-break:break-word; overflow-wrap:anywhere; }
 
 .pro-body-card { background:#ffffff; border:1px solid #e5e7eb; border-radius: 14px; overflow:hidden; }
 .pro-body-card__title { padding:10px 12px; font-weight:600; color:#0f172a; background:#f8fafc; border-bottom:1px solid #e5e7eb; }
@@ -617,25 +618,29 @@
             background: #f59e0b;
         }
 
-        .email-content {
+       .email-content {
             flex: 1;
+            min-width: 0;
         }
 
         .email-sender {
             font-weight: 600;
             color: #1e293b;
             margin-bottom: 0.25rem;
+            overflow-wrap: anywhere;
         }
 
         .email-subject {
             color: #64748b;
             font-size: 0.9rem;
             margin-bottom: 0.25rem;
+            overflow-wrap: anywhere;
         }
 
         .email-preview {
             color: #94a3b8;
             font-size: 0.8rem;
+            overflow-wrap: anywhere;
         }
 
         .email-meta {
@@ -1199,14 +1204,17 @@
 .checkbox-input:checked + .checkbox-custom::after {
     opacity: 1;
 }
+        
 .email-info {
     flex: 1;
+    min-width: 0;
 }
 .email-address {
     font-size: 16px;
     font-weight: 600;
     color: #111827;
     margin-bottom: 5px;
+    overflow-wrap: anywhere;
 }
 .email-provider {
     font-size: 14px;
@@ -1214,6 +1222,7 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    flex-wrap: wrap;
 }
 .provider-icon {
     width: 16px;
@@ -5092,9 +5101,16 @@ if (dlg) dlg.classList.add('modal-xl');
 
       if (!modal || !edFrom || !edSubj || !edDate || !edBody) return;
 
-      edFrom.textContent = from || '(neznámý odesílatel)';
-      edSubj.textContent = subject || '(bez předmětu)';
-      edDate.textContent = dateTxt || '';
+      const safeFrom = from || '(neznámý odesílatel)';
+      const safeSubject = subject || '(bez předmětu)';
+      const safeDate = dateTxt || '';
+
+      edFrom.textContent = safeFrom;
+      edFrom.title = safeFrom;
+      edSubj.textContent = safeSubject;
+      edSubj.title = safeSubject;
+      edDate.textContent = safeDate;
+      edDate.title = safeDate;
       if (emailEntry && emailEntry._pending && emailEntry.originalBody) {
         edBody.textContent = emailEntry.originalBody;
       } else {
@@ -5666,7 +5682,14 @@ function syncProMeta(){
   const from = document.getElementById('ed-from')?.textContent?.trim() || '';
   const subj = document.getElementById('ed-subject')?.textContent?.trim() || '';
   const date = document.getElementById('ed-date')?.textContent?.trim() || '';
-  const v = (id, val) => { const el = document.getElementById(id); if (el) el.textContent = val || '—'; };
+  const v = (id, val) => {
+    const el = document.getElementById(id);
+    if (el) {
+      const safe = val || '—';
+      el.textContent = safe;
+      el.title = safe;
+    }
+  };
 
   v('ed-from-meta', from);
   v('ed-subject-meta', subj);
@@ -6054,6 +6077,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
