Update print statement from 'Hello' to 'Goodbye'

--- a/dashboard.html
+++ b/dashboard.html
@@ -3988,7 +3988,7 @@ async function changePasswordSubmit() {
 
 
 
-// --- Helpers pro šablony ---
+// --- Helpers pro šablony ----
 function escapeHtml(s=''){return s.replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));}
 
 
@@ -6240,6 +6240,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
